fixed the width and position alignment of Header, Main and Footer

--- a/style.css
+++ b/style.css
@@ -36,11 +36,13 @@ html, body {
 
 /* Header */
 header {
-    position: fixed;
+    position: sticky;
+    top: 0;
     width: 100%;
     height: 4rem;
     background-color: white;
     z-index: 100;
+    box-sizing: border-box;
     border-left: 2px solid var(--header-border-color);
     border-right: 2px solid var(--header-border-color);
 }
@@ -53,6 +55,7 @@ nav ul {
     display: flex;
     justify-content: space-around;
     align-items: baseline;
+    padding: 0;
 }
 
 nav ul li {
@@ -70,7 +73,7 @@ nav a {
 
 @media screen and (min-width: 576px) {
     header {
-        border: 2px solid transparent;
+        border: none;
     }
     
     #header-desktop {
@@ -115,11 +118,11 @@ nav a {
 /* main */
 main {
     position: relative;
-    top: 4rem;
     width: 100%;
     border: 2px solid var(--main-border-color);
     border-top: none;
     border-bottom: none;
+    box-sizing: border-box;
 }
 
 /* banner */
@@ -524,10 +527,10 @@ main {
 /* footer  */
 footer {
     position: relative;
-    top: 4rem;;
     border: 2px solid var(--footer-border-color);
     border-top: none;
     background-color: var(--footer-background-color);
+    box-sizing: border-box;
 }
 
 #footer-container {
